tests/fixtures/errors/E0802_function_shadows_builtin.mimz
// expect: E0802
fn min(a: bits[8], b: bits[8]) -> bits[8] { a }
module M {
  out o: bits[8]
  o = min(1, 2)
}
